# entropix

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  api_test.py  docker-compose.yaml  download_weights.py  entropix.ipynb  main.py  pyproject.toml  req.py  torch_eval_main.py  torch_kvcache.py  torch_model.py
.github/workflows/: ruff.yaml
ai/: CHANGELOG.md  README.md
ai/blueprints/: flux-with-replicate.md  supabase-drizzle-actions.md
ai/codex/: codex.md  learn.md  split-codex.md
ai/plugins/: v0.md
ai/rules/: code-tutor.md  mckay.md
ai/session/: end-session.md  start-session.md
ai/snippets/: create-snippet.md  efc.md  shadcn.md
benchmark_results/: mesh_benchmark_20241022_192413.csv  mesh_benchmark_20241022_193130.csv  mesh_benchmark_20241022_193311.csv  mesh_benchmark_detailed_20241022_192413.json  mesh_benchmark_detailed_20241022_193130.json  mesh_benchmark_detailed_20241022_193311.json
data/: STEER_TOKENS.npy
docker/: Dockerfile.entropix
entropix/: LMState.py  README.md  benchmark.py  config.py  dslider.py  dslider_config.py  dslider_tuning.py  dslider_utils.py  engine.py  engine_main.py  eval.py  eval_main.py  generator.py  kvcache.py  lm_state.py  local_main.py  main.py  mcts.py  mlx_kvcache.py  mlx_main.py  mlx_model.py  mlx_sampler.py  mlx_stats.py  mlx_weights.py  model.py  orchestrator.py  prompts.py  rope.py  rope_tests.py  sampler.py  server.py  server_main.py  stats.py  token_utils.py  tokenizer.py  torch_device.py  torch_eval_main.py  torch_kvcache.py  torch_main.py  torch_model.py  (+5 more)
entropix/data/: prompts.csv
entropix/samplers/: __init__.py  baseline_sampler.py
entropix/server/: server.py
entropix/tests/: test_impl.py
evals/: README.md  common.py  demo.py  drop_eval.py  entropix.py  eval_types.py  gpqa_eval.py  humaneval_eval.py  math_eval.py  mgsm_eval.py  mmlu_eval.py  multilingual_mmlu_benchmark_results.md  run_multilingual_mmlu.py  simpleqa_eval.py
evals/human-eval/: setup.py
evals/human-eval/human_eval/: execution.py
evals/sampler/: chat_completion_sampler.py  claude_sampler.py  entropix_sampler.py  o1_chat_completion_sampler.py
forensics/: forensics.py  ui.py
forensics/evidence/: e6mT9pgs.txt  o1-mini thinking.txt
tests/: conftest.py  test_config.py  test_generation.py  test_kvcache.py  test_model.py  test_tokenizer.py  test_weights.py
ui/: .gitignore  README.md  TODO.md  bun.lockb  components.json  config.ts  package-lock.json  package.json  tsconfig.json  ui.py
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: FullSourceModal.tsx  LeftSidebar.tsx  RightSidebar.tsx  Sidebar.tsx  TopNavBar.tsx  dashboard-03.tsx
ui/components/Artifacts/: Actions.tsx  Code.tsx  Content.tsx  HtmlPreview.tsx  Logs.tsx  Sidebar.tsx  Tabs.tsx  TextPreview.tsx  index.tsx
ui/components/ChatArea/: ChatInput.tsx  EditModal.tsx  EditorPanel.tsx  MessageContent.tsx  MessageList.tsx  SimpleEditor.tsx  WelcomeMessage.tsx  index.tsx
ui/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  scroll-area.tsx  separator.tsx  skeleton.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  toggle.tsx  tooltip.tsx
ui/hooks/: usePyodide.ts
ui/lib/: utils.ts
ui/styles/: themes.ts
ui/styles/monaco-themes/: themelist.json
ui/types/: chat.ts
